Fix expanding gap bug in safari

--- a/src/components/embedding/Embedding.scss
+++ b/src/components/embedding/Embedding.scss
@@ -70,49 +70,41 @@
 :global(.top-svg .topic-label.top) {
   text-anchor: middle;
   dominant-baseline: auto;
-  alignment-baseline: auto;
 }
 
 :global(.top-svg .topic-label.bottom) {
   text-anchor: middle;
   dominant-baseline: hanging;
-  alignment-baseline: hanging;
 }
 
 :global(.top-svg .topic-label.left) {
   text-anchor: end;
   dominant-baseline: middle;
-  alignment-baseline: middle;
 }
 
 :global(.top-svg .topic-label.right) {
   text-anchor: start;
   dominant-baseline: middle;
-  alignment-baseline: middle;
 }
 
 :global(.top-svg .topic-label.top tspan) {
   text-anchor: middle;
   dominant-baseline: auto;
-  alignment-baseline: auto;
 }
 
 :global(.top-svg .topic-label.bottom tspan) {
   text-anchor: middle;
   dominant-baseline: hanging;
-  alignment-baseline: hanging;
 }
 
 :global(.top-svg .topic-label.left tspan) {
   text-anchor: end;
   dominant-baseline: hanging;
-  alignment-baseline: hanging;
 }
 
 :global(.top-svg .topic-label.right tspan) {
   text-anchor: start;
   dominant-baseline: hanging;
-  alignment-baseline: hanging;
 }
 
 @keyframes fadeIn {
